# taming-python-imports

./: .gitignore  LICENSE  README.md  lessons-learned.md  pyproject.toml
test1/: start.py
test2/: __init__.py  custom_math.py  custom_random.py  other.py  start.py
test2/packA/: a1.py
